<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainAddProduct">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/addProductText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold|italic"
            android:text="@string/addProductText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.281"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.033" />

        <EditText
            android:id="@+id/colorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="20dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/colorText"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/addProductButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.352"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addProductText"
            app:layout_constraintVertical_bias="0.0" />
        <EditText
            android:id="@+id/modelText"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:layout_marginStart="75dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="20dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:hint="@string/modelText"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.352"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/colorText" />


        <EditText
            android:id="@+id/brandText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="20dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:hint="@string/brandText"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/addProductButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.352"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/modelText"
            app:layout_constraintVertical_bias="0.02" />





        <EditText
            android:id="@+id/priceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="20dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:hint="@string/priceText"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/addProductButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.352"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/brandText"
            app:layout_constraintVertical_bias="0.052" />

        <EditText
            android:id="@+id/OSText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="20dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:hint="@string/OSText"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/addProductButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.372"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/priceText"
            app:layout_constraintVertical_bias="0.0" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="225dp"
            android:layout_height="43dp"
            android:layout_marginStart="75dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="20dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            app:layout_constraintBottom_toTopOf="@+id/addProductButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/OSText"
            app:layout_constraintVertical_bias="0.189" />

        <Button
            android:id="@+id/addProductButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="4dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="@string/addProductButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.427"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.949" />

        <TextView

            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="20dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="Double Click to add new product"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_primary_dark"
            android:textSize="10dp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.281"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.033" />
    </LinearLayout>
</ScrollView>